# interview

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.eng.md  README.md  backup.sh  docker-compose-zabbix.yml  docker-compose.yaml  index.html  pyproject.toml  zabbix-postgresql.conf
.github/workflows/: code-quality.yaml
26/: index.html
26/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
26/export/: influxDbData.txt  prometheusData.txt
26/history/: history-trend.json  history.json
26/widgets/: behaviors.json  categories-trend.json  duration.json  executors.json  retry-trend.json  summary.json
27/: index.html
27/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
27/export/: influxDbData.txt  prometheusData.txt
27/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
27/widgets/: executors.json  history-trend.json  severity.json  summary.json
28/: index.html
28/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
28/export/: influxDbData.txt  prometheusData.txt
28/history/: duration-trend.json  history.json
28/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
29/: index.html
29/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
29/export/: influxDbData.txt  prometheusData.txt
29/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
29/widgets/: duration-trend.json  executors.json  severity.json  summary.json  (+1 more)
30/: index.html
31/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
36/: index.html
37/: index.html
40/: index.html
41/: index.html
42/: index.html
43/: index.html
44/: index.html
45/: index.html
46/: index.html
47/: index.html
48/: index.html
49/: index.html
50/: index.html
52/: index.html
59/: index.html
60/: index.html
61/: index.html
62/: index.html
63/: index.html
67/: index.html
68/: index.html
69/: index.html
70/: index.html
71/: index.html
72/: index.html
73/: index.html
74/: index.html
75/: index.html
76/: index.html
77/: index.html
78/: index.html
79/: index.html
83/: index.html
84/: index.html
85/: index.html
86/: index.html
87/: index.html
88/: index.html
89/: index.html
90/: index.html
91/: index.html
92/: index.html
93/: index.html
94/: index.html
95/: index.html
96/: index.html
98/: index.html
99/: index.html
app/: main.py
frontend/: index.html
last-history/: duration-trend.json
nginx/: nginx.conf
tests/: conftest.py
(+4384 files in other folders)
